--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ html {
 
 body {
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     height: auto;
     overflow-x: hidden;
 }
@@ -599,6 +599,46 @@ nav ul li:hover a::after {
 
 .pahlawanSection {
     width: 100%;
-    height: 1000px;
-    background-color: pink;
+    height: 700px;
+    position: relative;
+}
+
+.content-pahlawan {
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/team-bg-left.png'),
+        url('../img/team-bg-right.png');
+    background-repeat: no-repeat,
+        no-repeat;
+    background-size: auto;
+    background-position: left bottom,
+        right top;
+}
+
+.pahlawanSection h1 {
+    /* Font & Text */
+    font-family: Poppins, sans-serif;
+    font-size: 50px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: normal;
+    line-height: 60px;
+    text-decoration: none solid rgb(0, 0, 0);
+    text-align: center;
+    text-indent: 0px;
+    text-transform: none;
+    vertical-align: baseline;
+    white-space: normal;
+    word-spacing: 0px;
+
+    /* Color & Background */
+    background-attachment: scroll;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: none;
+    background-position: 0% 0%;
+    background-repeat: repeat;
+    color: rgb(0, 0, 0);
+
+
 }
