--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,7 @@ nav ul li:hover a::after {
     /* background: linear-gradient(70deg, rgb(236, 238, 255), rgb(137, 147, 255), rgb(66, 81, 250)); */
     background-image: url('../img/home-bg-2.jpg');
     /* background-color: red; */
+    background-position-y: -40px;
     background-size: cover;
     background-repeat: no-repeat;
     padding: 10px 6.5%;
@@ -569,11 +570,12 @@ nav ul li:hover a::after {
     }
 
     .container-first {
-
+        background-size: cover;
         padding-top: 70px;
         height: auto;
-        min-height: 300px;
-        margin-bottom: 300px;
+        min-height: 650px;
+        /* margin-bottom: 300px; */
+        margin-bottom: 0px;
     }
 
     .left-box h1 {
@@ -598,9 +600,11 @@ nav ul li:hover a::after {
 }
 
 .pahlawanSection {
+    padding-top: 15px;
     width: 100%;
     height: 700px;
     position: relative;
+    /* background-color: #F6FBFF; */
 }
 
 .content-pahlawan {
