--- a/css/style.css
+++ b/css/style.css
@@ -598,10 +598,11 @@ nav ul li:hover a::after {
 
 }
 
+/* PAHLAWAN */
 .pahlawanSection {
     padding-top: 15px;
     width: 100%;
-    height: 700px;
+    height: 800px;
     position: relative;
     /* background-color: #F6FBFF; */
 }
@@ -614,7 +615,7 @@ nav ul li:hover a::after {
     background-repeat: no-repeat,
         no-repeat;
     background-size: auto;
-    background-position: left bottom,
+    background-position: 0px 0px,
         right top;
     padding: 80px 0 60px;
 }
@@ -655,8 +656,159 @@ nav ul li:hover a::after {
             right top;
     }
 
+    .pahlawanSection {
+        height: 1120px;
+    }
+
     .pahlawanSection h1 {
         font-size: 30px;
         line-height: 40px;
     }
+}
+
+
+/* Team Section */
+.teamSection {
+    padding-top: 35px;
+    width: 100%;
+    height: 500px;
+    position: relative;
+    background-color: #FFF;
+}
+
+.teamSection h1 {
+    /* Font & Text */
+    margin-bottom: 10px;
+    font-family: Poppins,
+        sans-serif;
+    font-size: 50px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: normal;
+    line-height: 60px;
+    text-decoration: none solid rgb(0, 0, 0);
+    text-align: center;
+    text-indent: 0px;
+    text-transform: none;
+    vertical-align: baseline;
+    white-space: normal;
+    word-spacing: 0px;
+
+    /* Color & Background */
+    background-attachment: scroll;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: none;
+    background-position: 0% 0%;
+    background-repeat: repeat;
+    color: rgb(0, 0, 0);
+
+    width: 540px;
+    display: block;
+    margin : auto;
+}
+
+.content-team {
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/map.png');
+    background-repeat: no-repeat,
+        no-repeat;
+    background-size: cover;
+    background-position: 0px 0px;
+    padding: 80px 0 60px;
+}
+
+@media (max-width : 576px) {
+
+    .teamSection h1 {
+        font-size: 30px;
+        line-height: 40px;
+    }
+}
+
+.box-team {
+    margin: auto;
+    width: 630px;
+    height: auto;
+}
+
+.team {
+    width: 50%;
+    height: 100%;
+    
+    float: left;
+    
+    padding: 10px;
+    position: relative;
+}
+
+@media (max-width : 657px){
+    .team{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .box-team{
+        width: 100%;
+    }
+}
+.team img {
+    margin: auto;
+    display: block;
+    width: 190px;
+    height: 190px;
+    border-radius: 50%;
+    position: absolute;
+    left : 50%;
+    top : 50%;
+    transform: translate(-50% , -50%);
+    /* display: none; */
+}
+
+.border-wrapper{
+    width: 197px;
+    height: 197px;
+    z-index: 1;
+    border: 0px solid black;
+    border-radius: 100%;
+    position: relative;
+    display: block;
+    margin : auto;
+    /* background-color: #276AFF; */
+    background-image: linear-gradient(125deg, red, rgb(138, 112, 255));
+}
+
+.text-team {
+    margin-top: 20px;
+    width: 100%;
+    height: 70px;
+    
+}
+
+.text-team h4 {
+    font-family: Poppins,
+        sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 34px;
+    text-decoration: none solid rgb(0, 0, 0);
+    text-align: center;
+    word-spacing: 0px;
+}
+
+.text-team h5 {
+    font-family: "Open Sans",
+        sans-serif;
+    font-size: 16px;
+    line-height: 26px;
+    text-decoration: none solid rgb(0, 132, 255);
+    text-align: center;
+    text-transform: uppercase;
+    word-spacing: 0px;
+    color: rgb(189, 89, 255);
+}
+
+
+.break {
+    clear: left;
 }
