--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ body {
     /* height: 100vh; */
     height: auto;
     overflow-x: hidden;
+    padding-bottom: 100px;
 }
 
 
@@ -768,7 +769,7 @@ nav ul li:hover a::after {
 .border-wrapper{
     width: 197px;
     height: 197px;
-    z-index: 1;
+    z-index: 0;
     border: 0px solid black;
     border-radius: 100%;
     position: relative;
