--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ nav ul li:hover a::after {
     text-align: left;
     word-spacing: 0px;
     box-sizing: border-box;
-    text-shadow: 0px 5px rgba(0,0,0,0.1);
+    text-shadow: 0px 5px rgba(0, 0, 0, 0.1);
     margin-top: 100px;
 }
 
@@ -609,14 +609,16 @@ nav ul li:hover a::after {
 .pahlawanSection {
     padding-top: 15px;
     width: 100%;
-    height: 800px;
+    height: auto;
     position: relative;
+    /* background-color: red; */
     /* background-color: #F6FBFF; */
 }
 
 .content-pahlawan {
     width: 100%;
     height: 100%;
+    height: auto;
     background-image: url('../img/team-bg-left.png'),
         url('../img/team-bg-right.png');
     background-repeat: no-repeat,
@@ -625,6 +627,8 @@ nav ul li:hover a::after {
     background-position: 0px 0px,
         right top;
     padding: 80px 0 60px;
+    padding-left: 11%;
+    padding-right: 11%;
 }
 
 
@@ -657,19 +661,144 @@ nav ul li:hover a::after {
 
 }
 
+.box-pahlawan {
+    width: 100%;
+    height: auto;
+    /* background-color: red; */
+}
+
+.box-pahlawan li {
+    width: 100%;
+    height: auto;
+    /* background-color: pink; */
+    margin-bottom: 70px;
+}
+
+.left-side-pahlawan {
+    width: 400px;
+    height: 450px;
+    /* background-color: green; */
+    padding: 10px;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+}
+
+.left-side-pahlawan img {
+    width: 290px;
+    height: 350px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 3px 5px 1px 1px rgba(0, 0, 0, 0.45);
+}
+
+.right-side-pahlawan {
+    width: calc(100% - 400px);
+    background-color: rgba(0, 220, 0, 0.0);
+    height: 100%;
+    float: left;
+    padding: 10px;
+}
+
+.right-side-pahlawan h2 {
+    font-family: Poppins,
+        sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 34px;
+    text-decoration: none solid rgb(0, 0, 0);
+    text-align: center;
+    word-spacing: 0px;
+}
+
+.right-side-pahlawan p {
+    text-indent: 30px;
+    text-align: justify;
+    text-align-last: left;
+}
+
+.box-pahlawan li:nth-child(even) .left-side-pahlawan , 
+.box-pahlawan li:nth-child(even) .right-side-pahlawan {
+    float: right;
+}
+.box-pahlawan li:nth-child(even) .left-side-pahlawan img{
+    box-shadow: 3px 5px 1px 1px rgba(0, 0, 0, 0.45);
+}
+
+
+@media (max-width : 1135px) {
+    .content-pahlawan {
+        padding-left: 3%;
+        padding-right: 4%;
+    }
+
+    .right-side-pahlawan {
+        padding: 10px 0px;
+    }
+}
+
+@media (max-width : 903px) {
+    .left-side-pahlawan {
+        width: 320px;
+    }
+
+    .right-side-pahlawan{
+        padding: 50px 0px;
+    }
+
+    .left-side-pahlawan img {
+        width: 210px;
+        height: 290px;
+        display: block;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 3px 5px 1px 1px rgba(0, 0, 0, 0.45);
+    }
+}
+
+@media (max-width : 800px){
+    .left-side-pahlawan{
+        width: 100%;
+    }
+    .right-side-pahlawan{
+        width: 100%;
+        padding : 30px;
+    }
+}
+
+
+
+
+
+
 @media (max-width : 576px) {
     .content-pahlawan {
         background-position: 0px 350px,
             right top;
     }
 
-    .pahlawanSection {
-        height: 1120px;
-    }
 
     .pahlawanSection h1 {
         font-size: 30px;
         line-height: 40px;
+    }
+
+    .left-side-pahlawan {
+        height: 300px;
+    }
+    .right-side-pahlawan{
+        padding-left: 1.9%;
+        padding-right: 1.9%;
+        /* background-color: red; */
+    }
+    
+    .content-pahlawan{
+        padding-left: 0px;
     }
 }
 
@@ -698,7 +827,7 @@ nav ul li:hover a::after {
     text-align: center;
     text-indent: 0px;
     text-transform: none;
-    vertical-align: baseline;
+    
     white-space: normal;
     word-spacing: 0px;
 
@@ -820,5 +949,5 @@ nav ul li:hover a::after {
 
 
 .break {
-    clear: left;
+    clear: both;
 }
