--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,7 @@ nav ul li:hover a::after {
     box-sizing: border-box;
     text-shadow: 0px 5px rgba(0, 0, 0, 0.1);
     margin-top: 100px;
+    opacity: 0;
 }
 
 
